# Android_Trainings

./: README.md  dirCleaner_Android.sh
BasicApp_01/: README.md
BasicApp_01/src/main/java/com/example/basicapp01/: MainActivity.java
BasicApp_01/src/main/res/values/: strings.xml
BasicApp_01_HelloWorld/: README.md
BasicApp_01_HelloWorld/src/main/: AndroidManifest.xml
BasicApp_01_HelloWorld/src/main/res/layout/: activity_main.xml
BasicApp_02_Calculator/: README.md
BasicApp_02_Calculator/src/main/java/com/example/calculator/: MainActivity.java
BasicApp_02_Calculator/src/main/res/layout/: activity_main.xml
BasicApp_02_Calculator/src/main/res/values/: strings.xml
BasicApp_02_Calculator_NDK/app/: build.gradle
BasicApp_02_Calculator_NDK/app/src/androidTest/java/com/example/calculator/: ExampleInstrumentedTest.java
BasicApp_02_Calculator_NDK/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BasicApp_02_Calculator_NDK/app/src/main/cpp/calculator/: Calculator.cpp
BasicApp_02_Calculator_NDK/app/src/main/java/com/example/calculator/: Calculator.java  MainActivity.java
BasicApp_02_Calculator_NDK/app/src/main/res/layout/: activity_main.xml
BasicApp_02_Calculator_NDK/app/src/main/res/values/: strings.xml
BasicApp_02_Calculator_NDK_Compose/app/: build.gradle.kts
BasicApp_02_Calculator_NDK_Compose/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
BasicApp_02_Calculator_NDK_Compose/app/src/main/cpp/calculator/: Calculator.hpp
BasicApp_02_Calculator_NDK_Compose/app/src/main/java/com/example/calculator/: MainActivity.kt
BasicApp_02_Calculator_NDK_Compose/app/src/main/java/com/example/calculator/ui/: CalculatorButton.kt  CalculatorScreen.kt  CalculatorUiState.kt  (+1 more)
BasicApp_02_Calculator_QML/: README.md
BasicApp_02_Calculator_QML/src/Calculator/: CMakeLists.txt  qCalculatorLogic.cpp  qCalculatorLogic.hpp  qCalculatorMain.cpp
BasicApp_02_Calculator_QML/src/Calculator/calculator/: Calculator.cpp
BasicApp_02_Calculator_QML/src/Calculator/ui/: CalculatorButton.qml  CalculatorMain.qml  CalculatorScreen.qml
BasicApp_03_SaveFile/src/main/: AndroidManifest.xml
BasicApp_03_SaveFile/src/main/java/com/example/basicapp03/: MainActivity.java
BasicApp_03_SaveFile/src/main/res/layout/: activity_main.xml
BasicApp_03_SaveFile/src/main/res/values/: strings.xml
CanvasApp_01/: README.md
CanvasApp_01/src/main/: AndroidManifest.xml
CanvasApp_01_Circle/: README.md
CanvasApp_01_Circle/src/main/java/com/example/canvasapp01/: MainActivity.java  ViewCanvas.java
CanvasApp_01_Circle/src/main/res/layout/: activity_main.xml
CanvasApp_01_Circle/src/main/res/values/: colors.xml
CanvasApp_02/src/main/: AndroidManifest.xml
CanvasApp_02/src/main/java/com/example/canvasapp02/: MainActivity.java
CanvasApp_02/src/main/res/layout/: activity_main.xml
CanvasApp_02/src/main/res/values/: strings.xml
CanvasApp_02_Paint/: README.md
CanvasApp_02_Paint/src/main/java/com/example/canvasapp02/: ViewCanvas.java
(+2 files in other folders)
